[package]
name = "stm32-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.1.0"
embassy-executor = { version = "0.9.1", features = [
    "arch-cortex-m",
    "executor-thread",
    "defmt",
] }
embassy-stm32 = { version = "0.5.0", features = [
    "defmt",
    "time-driver-any",
    "stm32c071rb",
    "memory-x",
    "unstable-pac",
    "exti",
    "chrono",
] }
embassy-sync = { version = "0.7.2", features = ["defmt"] }

embassy-time = { version = "0.5.0", features = ["defmt"] }
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
panic-probe = { version = "1.0.0", features = ["defmt"] }

[package.metadata.embassy]
build = [{ target = "thumbv6m-none-eabi", artifact-dir = "out/stm32-rs" }]
